<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="appName">MindMap</string>

  <string name="newTree">New</string>
  <string name="add">Add</string>
  <string name="remove">Remove</string>
  <string name="edit">Edit</string>
  <string name="fit">Fit</string>
  <string name="open">Open file</string>
  <string name="save">Save file</string>
  <string name="share">Share</string>
  <string name="image">Image</string>
  <string name="json">JSON</string>
  <string name="inport">Import Markdown</string>
  <string name="export">Export</string>
  <string name="xml">XML</string>
  <string name="markdown">Markdown</string>

  <string name="addNode">Add node</string>
  <string name="node">Node</string>
  <string name="nodeDesc">
    Please enter the description for this node
  </string>
  <string name="description">Description</string>
  <string name="editNode">Edit node</string>
  <string name="remNode">Remove node</string>
  <string name="nodeRem">
    Do you want to remove this node?
  </string>
  <string name="invalid">
    This file is not a MindMap file
  </string>
  <string name="replace">
    Do you want to replace this MindMap
  </string>
  <string name="back">
    Do you want to save this MindMap
  </string>

  <string name="help">Help</string>
  <string name="about">About</string>
  <string name="version" formatted="false"><a
  href="https://github.com/billthefarmer/mindmap/releases/latest">%s</a>\n\nBuilt
  %s\n\n<a href="https://github.com/hegleB/MindMapView">MindMapView</a> library
  by <a href="https://github.com/hegleB">SangJun Lee</a>\n\nCopyright
  \u00A9 2026 <a href="https://github.com/billthefarmer">Bill
  Farmer</a>\n\nLicence <a href="https://www.gnu.org/licenses/gpl.txt">GNU
  GPLv3</a>
  </string>

</resources>
