<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

  <item
      android:id="@+id/action_add"
      android:icon="@drawable/ic_add_white_24dp"
      android:showAsAction="always"
      android:title="@string/add" />

  <item
      android:id="@+id/action_remove"
      android:icon="@drawable/ic_remove_white_24dp"
      android:showAsAction="always"
      android:title="@string/remove" />

  <item
      android:id="@+id/action_edit"
      android:icon="@drawable/ic_edit_white_24dp"
      android:showAsAction="always"
      android:title="@string/edit" />

  <item
      android:id="@+id/action_fit"
      android:icon="@drawable/ic_zoom_out_map_white_24dp"
      android:showAsAction="ifRoom"
      android:title="@string/fit" />

  <item
      android:id="@+id/action_open"
      android:icon="@drawable/ic_folder_open_white_24dp"
      android:showAsAction="ifRoom"
      android:title="@string/open" />

  <item
      android:id="@+id/action_save"
      android:icon="@drawable/ic_save_white_24dp"
      android:showAsAction="ifRoom"
      android:title="@string/save" />

</menu>
